bugfix: sidebar results scrollbar cropped, append input groups after search bar

--- a/app/assets/stylesheets/openlayer.scss
+++ b/app/assets/stylesheets/openlayer.scss
@@ -191,6 +191,8 @@
     .sidebar-form {
       border: none;
       height: 100%;
+      display: flex;
+      flex-direction: column;
 
       .input-group {
         border: 1px solid #d2d6de;
